updated snes configs

--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Sun Aug  2 13:27:33 2020
+# Tue Aug  4 20:01:36 2020
 
 [Input]
 ControllerPort0   = joypad
@@ -25,7 +25,7 @@ UseModalDialogs             = true
 [Files]
 CheatDirectory      = /home/jma/.config/snes9x/cheats/
 ExportDirectory     = /home/jma/.config/snes9x/exports/
-LastDirectory       = /home/jma/Final Fantasy IV Ultima v11_11
+LastDirectory       = /home/jma/Roms4
 PatchDirectory      = /home/jma/.config/snes9x/patches/
 SRAMDirectory       = /home/jma/.config/snes9x/sram/
 SaveStateDirectory  = /home/jma/.config/snes9x/saves/
