Added bashtop config, updated other rc files

--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Tue Aug  4 20:01:36 2020
+# Wed Aug  5 02:52:09 2020
 
 [Input]
 ControllerPort0   = joypad
@@ -55,7 +55,7 @@ LastUsedROM    =
 EnableCustomShaders       = false
 PixelBufferObjectBitDepth = 16
 SyncControl               = false
-UseNonPowerOfTwoTextures  = true
+UseNonPowerOfTwoTextures  = false
 UsePixelBufferObjects     = true
 VSync                     = false
 glFinish                  = false
@@ -113,7 +113,7 @@ ScaleToFit              = true   # Scale the image to fit the window size
 ScanlineFilterIntensity = 0      # 0: 0%, 1: 12.5%, 2: 25%, 3: 50%, 4: 100%
 ShowOverscanArea        = false
 SoftwareScaleFilter     = 16     # Build-specific number of filter used for software scaling
-SplashBackground        = 2      # 0: Black, 1: Color bars, 2: Pattern, 3: Blue, 4: Default
+SplashBackground        = 0      # 0: Black, 1: Color bars, 2: Pattern, 3: Blue, 4: Default
 VideoMode               = 0      # Platform-specific video mode number
 
 [Joypad 0]
