--- a/.config/bashtop/bashtop.cfg
+++ b/.config/bashtop/bashtop.cfg
@@ -2,7 +2,7 @@
 
 #* Color theme, looks for a .theme file in "$HOME/.config/bashtop/themes" and "$HOME/.config/bashtop/user_themes"
 #* Should be prefixed with either "themes/" or "user_themes/" depending on location, "Default" for builtin default theme
-color_theme="monokai"
+color_theme="themes/flat-remix"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs
 update_ms="1800"
@@ -39,7 +39,7 @@ proc_gradient="true"
 proc_per_core="false"
 
 #* Optional filter for shown disks, should be names of mountpoints, "root" replaces "/", separate multiple values with space
-disks_filter="root"
+disks_filter="root builds"
 
 #* Enable check for new version from github.com/aristocratos/bashtop at start
 update_check="false"
