--- a/.config/citra-emu/qt-config.ini
+++ b/.config/citra-emu/qt-config.ini
@@ -99,7 +99,7 @@ profiles\2\button_b="button:1,engine:sdl,guid:030000006f0e00001402000011010000,p
 profiles\2\button_b\default=false
 profiles\2\button_debug="code:79,engine:keyboard"
 profiles\2\button_debug\default=true
-profiles\2\button_down="direction:down,engine:sdl,guid:030000006f0e00001402000011010000,hat:0,port:0"
+profiles\2\button_down="axis:1,direction:+,engine:sdl,guid:030000006f0e00001402000011010000,port:0,threshold:0.5"
 profiles\2\button_down\default=false
 profiles\2\button_gpio14="code:80,engine:keyboard"
 profiles\2\button_gpio14\default=true
@@ -107,17 +107,17 @@ profiles\2\button_home="code:66,engine:keyboard"
 profiles\2\button_home\default=true
 profiles\2\button_l="button:6,engine:sdl,guid:030000006f0e00001402000011010000,port:0"
 profiles\2\button_l\default=false
-profiles\2\button_left="direction:left,engine:sdl,guid:030000006f0e00001402000011010000,hat:0,port:0"
+profiles\2\button_left="axis:0,direction:-,engine:sdl,guid:030000006f0e00001402000011010000,port:0,threshold:-0.5"
 profiles\2\button_left\default=false
 profiles\2\button_r="button:7,engine:sdl,guid:030000006f0e00001402000011010000,port:0"
 profiles\2\button_r\default=false
-profiles\2\button_right="direction:right,engine:sdl,guid:030000006f0e00001402000011010000,hat:0,port:0"
+profiles\2\button_right="axis:0,direction:+,engine:sdl,guid:030000006f0e00001402000011010000,port:0,threshold:0.5"
 profiles\2\button_right\default=false
 profiles\2\button_select="button:8,engine:sdl,guid:030000006f0e00001402000011010000,port:0"
 profiles\2\button_select\default=false
 profiles\2\button_start="button:9,engine:sdl,guid:030000006f0e00001402000011010000,port:0"
 profiles\2\button_start\default=false
-profiles\2\button_up="direction:up,engine:sdl,guid:030000006f0e00001402000011010000,hat:0,port:0"
+profiles\2\button_up="axis:1,direction:-,engine:sdl,guid:030000006f0e00001402000011010000,port:0,threshold:-0.5"
 profiles\2\button_up\default=false
 profiles\2\button_x="button:3,engine:sdl,guid:030000006f0e00001402000011010000,port:0"
 profiles\2\button_x\default=false
@@ -129,7 +129,7 @@ profiles\2\button_zr="button:5,engine:sdl,guid:030000006f0e00001402000011010000,
 profiles\2\button_zr\default=false
 profiles\2\c_stick="down:axis$03$1direction$0+$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$00.5,engine:analog_from_button,left:axis$02$1direction$0-$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$0-0.5,modifier:code$068$1engine$0keyboard,modifier_scale:0.500000,right:axis$02$1direction$0+$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$00.5,up:axis$03$1direction$0-$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$0-0.5"
 profiles\2\c_stick\default=false
-profiles\2\circle_pad="down:axis$01$1direction$0+$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$00.5,engine:analog_from_button,left:axis$00$1direction$0-$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$0-0.5,modifier:code$068$1engine$0keyboard,modifier_scale:0.500000,right:axis$00$1direction$0+$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$00.5,up:axis$01$1direction$0-$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1port$00$1threshold$0-0.5"
+profiles\2\circle_pad="down:direction$0down$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1hat$00$1port$00,engine:analog_from_button,left:direction$0left$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1hat$00$1port$00,modifier:code$068$1engine$0keyboard,modifier_scale:0.500000,right:direction$0right$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1hat$00$1port$00,up:direction$0up$1engine$0sdl$1guid$0030000006f0e00001402000011010000$1hat$00$1port$00"
 profiles\2\circle_pad\default=false
 profiles\2\motion_device="engine:motion_emu,update_period:100,sensitivity:0.01,tilt_clamp:90.0"
 profiles\2\motion_device\default=true
@@ -378,7 +378,7 @@ Paths\language=en
 Paths\language\default=false
 Paths\moviePlaybackPath=
 Paths\movieRecordPath=
-Paths\recentFiles="/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/3DS0011 - Super Street Fighter IV - 3D Edition (Europe) (En,Fr,De,Es,It) Decrypted.3ds"
+Paths\recentFiles=/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/The Legend of Zelda - A Link Between Worlds (EUR) [Decrypted].3ds, "/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/3DS0011 - Super Street Fighter IV - 3D Edition (Europe) (En,Fr,De,Es,It) Decrypted.3ds"
 Paths\romsPath=
 Paths\screenshotPath=
 Paths\symbolsPath=
@@ -475,13 +475,13 @@ Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context=2
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq=Ctrl+D
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq\default=true
-UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x5\0\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1T\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
-UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x13\0\0\x1[\0\0\x6\x12\0\0\x3\x93\0\0\x1\x13\0\0\x1x\0\0\x6\x12\0\0\x3\x93\0\0\0\0\0\0\0\0\a\x80\0\0\x1\x13\0\0\x1x\0\0\x6\x12\0\0\x3\x93)
-UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\x63\0\0\0\x1d\0\0\0\0\0\0\0\0\0\0\0\x63\0\0\0\x1d\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\0\x63\0\0\0\x1d)
-UILayout\microProfileDialogGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xe7\0\0\x2W\0\0\0\0\0\0\0\0\0\0\x3\xe7\0\0\x2W\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xe7\0\0\x2W)
+UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\aG\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\x9b\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\0\0\0\xba\0\0\0\x9f\0\0\x5\xb9\0\0\x2\xbb\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
+UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x1\xdf\0\0\x1\xdf\0\0\0\0\0\0\0\0\0\0\x1\xdf\0\0\x1\xdf\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x1\xdf\0\0\x1\xdf)
+UILayout\microProfileDialogGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k)
 UILayout\microProfileDialogVisible=false
 UILayout\microProfileDialogVisible\default=true
-UILayout\state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\x1\xfb\0\0\0\x1c\0W\0\x61\0i\0t\0T\0r\0\x65\0\x65\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\0\0\0\x1\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\b\xfb\0\0\0\x18\0\x41\0R\0M\0R\0\x65\0g\0i\0s\0t\0\x65\0r\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x85\x1\0\0\x3\xfb\0\0\0 \0G\0r\0\x61\0p\0h\0i\0\x63\0s\0\x44\0\x65\0\x62\0u\0g\0g\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\"\0P\0i\0\x63\0\x61\0 \0\x43\0o\0m\0m\0\x61\0n\0\x64\0 \0L\0i\0s\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0*\0P\0i\0\x63\0\x61\0\x42\0r\0\x65\0\x61\0k\0P\0o\0i\0n\0t\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0 \0P\0i\0\x63\0\x61\0V\0\x65\0r\0t\0\x65\0x\0S\0h\0\x61\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xde\x1\0\0\x3\xfb\0\0\0\x12\0\x43\0i\0T\0r\0\x61\0\x63\0i\0n\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0P\x1\0\0\x3\xfb\0\0\0.\0L\0L\0\x45\0S\0\x65\0r\0v\0i\0\x63\0\x65\0M\0o\0\x64\0u\0l\0\x65\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\x16\0I\0P\0\x43\0R\0\x65\0\x63\0o\0r\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xef\x1\0\0\x3\0\0\x5\0\0\0\x1\xdf\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
+UILayout\state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\x1\xfb\0\0\0\x1c\0W\0\x61\0i\0t\0T\0r\0\x65\0\x65\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\0\0\0\x1\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\b\xfb\0\0\0\x18\0\x41\0R\0M\0R\0\x65\0g\0i\0s\0t\0\x65\0r\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x85\x1\0\0\x3\xfb\0\0\0 \0G\0r\0\x61\0p\0h\0i\0\x63\0s\0\x44\0\x65\0\x62\0u\0g\0g\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\"\0P\0i\0\x63\0\x61\0 \0\x43\0o\0m\0m\0\x61\0n\0\x64\0 \0L\0i\0s\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0*\0P\0i\0\x63\0\x61\0\x42\0r\0\x65\0\x61\0k\0P\0o\0i\0n\0t\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0 \0P\0i\0\x63\0\x61\0V\0\x65\0r\0t\0\x65\0x\0S\0h\0\x61\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xde\x1\0\0\x3\xfb\0\0\0\x12\0\x43\0i\0T\0r\0\x61\0\x63\0i\0n\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0P\x1\0\0\x3\xfb\0\0\0.\0L\0L\0\x45\0S\0\x65\0r\0v\0i\0\x63\0\x65\0M\0o\0\x64\0u\0l\0\x65\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\x16\0I\0P\0\x43\0R\0\x65\0\x63\0o\0r\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xef\x1\0\0\x3\0\0\a\\\0\0\x3\xde\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
 Updater\check_for_update_on_start=true
 Updater\check_for_update_on_start\default=true
 Updater\update_on_close=false
@@ -506,8 +506,8 @@ screenshot_resolution_factor=0
 screenshot_resolution_factor\default=true
 showConsole=false
 showConsole\default=true
-showFilterBar=true
-showFilterBar\default=true
+showFilterBar=false
+showFilterBar\default=false
 showStatusBar=true
 showStatusBar\default=true
 singleWindowMode=true
