--- a/.config/powershell/starship.toml
+++ b/.config/powershell/starship.toml
@@ -1,4 +1,8 @@
 [character]
-symbol = "➜"
+symbol = "❯"
 error_symbol = "✗"
 use_symbol_for_status = true
+
+[cmd_duration]
+min_time = 250
+prefix = "underwent "
