Updated falkon bookmarks & ini

--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=13
+RunsWithoutOptimizeDb=15
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -54,7 +54,7 @@ SideBar=
 SideBarWidth=250
 WebSearchBarWidth=332
 WebViewWidth=2000
-WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0Q\0\0\0\x61\0\0\a\x2\0\0\x3\xbb\0\0\0Q\0\0\0~\0\0\a\x2\0\0\x3\xbb\0\0\0\0\0\0\0\0\a\x80\0\0\0Q\0\0\0~\0\0\a\x2\0\0\x3\xbb)
+WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0y\0\0\0\xa2\0\0\a*\0\0\x3\xfc\0\0\0y\0\0\0\xbf\0\0\a*\0\0\x3\xfc\0\0\0\0\0\0\0\0\a\x80\0\0\0y\0\0\0\xbf\0\0\a*\0\0\x3\xfc)
 instantBookmarksToolbar=false
 settingsDialogPage=0
 showBookmarksToolbar=false
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=false
+isRunning=true
 
 [Shortcuts]
 useSingleKeyShortcuts=false
