Updated Rc files

--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=15
+RunsWithoutOptimizeDb=16
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -49,12 +49,12 @@ showCloseOnInactiveTabs=0
 showClosedTabsButton=false
 
 [Browser-View-Settings]
-LocationBarWidth=1139
+LocationBarWidth=1113
 SideBar=
 SideBarWidth=250
-WebSearchBarWidth=332
+WebSearchBarWidth=324
 WebViewWidth=2000
-WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0y\0\0\0\xa2\0\0\a*\0\0\x3\xfc\0\0\0y\0\0\0\xbf\0\0\a*\0\0\x3\xfc\0\0\0\0\0\0\0\0\a\x80\0\0\0y\0\0\0\xbf\0\0\a*\0\0\x3\xfc)
+WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0h\0\0\0\xa3\0\0\a\x19\0\0\x3\xfd\0\0\0h\0\0\0\xc0\0\0\a\x19\0\0\x3\xfd\0\0\0\0\0\0\0\0\a\x80\0\0\0h\0\0\0\xc0\0\0\a\x19\0\0\x3\xfd)
 instantBookmarksToolbar=false
 settingsDialogPage=0
 showBookmarksToolbar=false
