More updates to RC files

--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Fri Aug 14 04:10:17 2020
+# Mon Aug 17 04:10:58 2020
 
 [Input]
 ControllerPort0   = joypad
@@ -25,11 +25,11 @@ UseModalDialogs             = true
 [Files]
 CheatDirectory      = /home/jma/.config/snes9x/cheats/
 ExportDirectory     = /home/jma/.config/snes9x/exports/
-LastDirectory       = /home/jma/Roms4
+LastDirectory       = /home/jma/Roms4/SNES - Final Fantasy IV Ultima v11_11
+LastShaderDirectory = /home/jma/.config/snes9x/shaders
 PatchDirectory      = /home/jma/.config/snes9x/patches/
 SRAMDirectory       = /home/jma/.config/snes9x/sram/
 SaveStateDirectory  = /home/jma/.config/snes9x/saves/
-LastShaderDirectory = 
 
 [Emulation]
 AllowDPadContradictions = false  # Allow the D-Pad to press both up + down at the same time, or left + right
@@ -73,7 +73,7 @@ MuteSoundDuringTurbo    = false
 PlaybackRate            = 7      # 1: 8000Hz, 2: 11025Hz, 3: 16000Hz, 4: 22050Hz, 5: 32000Hz, 6: 44100Hz, 7: 48000Hz
 
 [Window State]
-CurrentDisplayTab      = 2
+CurrentDisplayTab      = 1
 EnableIcons            = true
 Fullscreen             = false
 MainHeight             = 923
