--- a/.config/citra-emu/qt-config.ini
+++ b/.config/citra-emu/qt-config.ini
@@ -424,49 +424,49 @@ Shortcuts\Main%20Window\Load%20File\Context\default=true
 Shortcuts\Main%20Window\Load%20File\KeySeq=Ctrl+O
 Shortcuts\Main%20Window\Load%20File\KeySeq\default=true
 Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\Context=1
-Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\Context\default=true
+Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\Context\default=false
 Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\KeySeq=Ctrl+V
-Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\KeySeq\default=true
+Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\KeySeq\default=false
 Shortcuts\Main%20Window\Remove%20Amiibo\Context=2
-Shortcuts\Main%20Window\Remove%20Amiibo\Context\default=true
+Shortcuts\Main%20Window\Remove%20Amiibo\Context\default=false
 Shortcuts\Main%20Window\Remove%20Amiibo\KeySeq=F3
-Shortcuts\Main%20Window\Remove%20Amiibo\KeySeq\default=true
+Shortcuts\Main%20Window\Remove%20Amiibo\KeySeq\default=false
 Shortcuts\Main%20Window\Restart%20Emulation\Context=1
 Shortcuts\Main%20Window\Restart%20Emulation\Context\default=true
 Shortcuts\Main%20Window\Restart%20Emulation\KeySeq=F6
-Shortcuts\Main%20Window\Restart%20Emulation\KeySeq\default=true
+Shortcuts\Main%20Window\Restart%20Emulation\KeySeq\default=false
 Shortcuts\Main%20Window\Rotate%20Screens%20Upright\Context=1
 Shortcuts\Main%20Window\Rotate%20Screens%20Upright\Context\default=true
 Shortcuts\Main%20Window\Rotate%20Screens%20Upright\KeySeq=F8
-Shortcuts\Main%20Window\Rotate%20Screens%20Upright\KeySeq\default=true
+Shortcuts\Main%20Window\Rotate%20Screens%20Upright\KeySeq\default=false
 Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\Context=1
 Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\Context\default=true
 Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\KeySeq=Ctrl+C
-Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\KeySeq\default=true
+Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\KeySeq\default=false
 Shortcuts\Main%20Window\Stop%20Emulation\Context=1
 Shortcuts\Main%20Window\Stop%20Emulation\Context\default=true
 Shortcuts\Main%20Window\Stop%20Emulation\KeySeq=F5
-Shortcuts\Main%20Window\Stop%20Emulation\KeySeq\default=true
+Shortcuts\Main%20Window\Stop%20Emulation\KeySeq\default=false
 Shortcuts\Main%20Window\Swap%20Screens\Context=1
 Shortcuts\Main%20Window\Swap%20Screens\Context\default=true
 Shortcuts\Main%20Window\Swap%20Screens\KeySeq=F9
-Shortcuts\Main%20Window\Swap%20Screens\KeySeq\default=true
+Shortcuts\Main%20Window\Swap%20Screens\KeySeq\default=false
 Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\Context=2
-Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\Context\default=true
+Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\Context\default=false
 Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\KeySeq=Ctrl+Z
-Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\KeySeq\default=true
+Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\KeySeq\default=false
 Shortcuts\Main%20Window\Toggle%20Filter%20Bar\Context=1
-Shortcuts\Main%20Window\Toggle%20Filter%20Bar\Context\default=true
+Shortcuts\Main%20Window\Toggle%20Filter%20Bar\Context\default=false
 Shortcuts\Main%20Window\Toggle%20Filter%20Bar\KeySeq=Ctrl+F
-Shortcuts\Main%20Window\Toggle%20Filter%20Bar\KeySeq\default=true
+Shortcuts\Main%20Window\Toggle%20Filter%20Bar\KeySeq\default=false
 Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\Context=2
-Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\Context\default=true
+Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\Context\default=false
 Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\KeySeq=Ctrl+A
-Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\KeySeq\default=true
+Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\KeySeq\default=false
 Shortcuts\Main%20Window\Toggle%20Screen%20Layout\Context=1
-Shortcuts\Main%20Window\Toggle%20Screen%20Layout\Context\default=true
+Shortcuts\Main%20Window\Toggle%20Screen%20Layout\Context\default=false
 Shortcuts\Main%20Window\Toggle%20Screen%20Layout\KeySeq=F10
-Shortcuts\Main%20Window\Toggle%20Screen%20Layout\KeySeq\default=true
+Shortcuts\Main%20Window\Toggle%20Screen%20Layout\KeySeq\default=false
 Shortcuts\Main%20Window\Toggle%20Status%20Bar\Context=1
 Shortcuts\Main%20Window\Toggle%20Status%20Bar\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Status%20Bar\KeySeq=Ctrl+S
@@ -476,7 +476,7 @@ Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq=Ctrl+D
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq\default=true
 UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x4\x82\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\xd6\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
-UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x34\0\0\0\xcb\0\0\x5\xca\0\0\x3\x4\0\0\x1\x34\0\0\0\xe8\0\0\x5\xca\0\0\x3\x4\0\0\0\0\0\0\0\0\a\x80\0\0\x1\x34\0\0\0\xe8\0\0\x5\xca\0\0\x3\x4)
+UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\xb6\0\0\0\xde\0\0\x5L\0\0\x3\x17\0\0\0\xb6\0\0\0\xfb\0\0\x5L\0\0\x3\x17\0\0\0\0\0\0\0\0\a\x80\0\0\0\xb6\0\0\0\xfb\0\0\x5L\0\0\x3\x17)
 UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3)
 UILayout\microProfileDialogGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k)
 UILayout\microProfileDialogVisible=false
