--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xc1\0\xbf\x9c\xd1\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xc7\0\xd9R\xc3\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=16
+RunsWithoutOptimizeDb=18
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -54,7 +54,7 @@ SideBar=
 SideBarWidth=250
 WebSearchBarWidth=324
 WebViewWidth=2000
-WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0h\0\0\0\xa3\0\0\a\x19\0\0\x3\xfd\0\0\0h\0\0\0\xc0\0\0\a\x19\0\0\x3\xfd\0\0\0\0\0\0\0\0\a\x80\0\0\0h\0\0\0\xc0\0\0\a\x19\0\0\x3\xfd)
+WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0j\0\0\0I\0\0\a\x1b\0\0\x3\xa3\0\0\0j\0\0\0\x66\0\0\a\x1b\0\0\x3\xa3\0\0\0\0\0\0\0\0\a\x80\0\0\0j\0\0\0\x66\0\0\a\x1b\0\0\x3\xa3)
 instantBookmarksToolbar=false
 settingsDialogPage=0
 showBookmarksToolbar=false
@@ -62,7 +62,7 @@ showNavigationToolbar=true
 showStatusBar=false
 
 [BrowsingLibrary]
-historyState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x8c\0\0\0\x4\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0<\0\0\0\x1\0\0\0\0\0\0\0\x4\0\0\x1\xe\0\0\0\x1\0\0\0\0\0\0\0\xec\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0O\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0<)
+historyState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xa1\0\0\0\x4\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0<\0\0\0\x1\0\0\0\0\0\0\0\x4\0\0\x1\xe\0\0\0\x1\0\0\0\0\0\0\0\xec\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0<)
 size=@Size(760 470)
 
 [Cookie-Settings]
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=true
+isRunning=false
 
 [Shortcuts]
 useSingleKeyShortcuts=false
