--- a/.config/citra-emu/qt-config.ini
+++ b/.config/citra-emu/qt-config.ini
@@ -476,7 +476,7 @@ Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq=Ctrl+D
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq\default=true
 UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x4\x82\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\xd6\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
-UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\xb6\0\0\0\xde\0\0\x5L\0\0\x3\x17\0\0\0\xb6\0\0\0\xfb\0\0\x5L\0\0\x3\x17\0\0\0\0\0\0\0\0\a\x80\0\0\0\xb6\0\0\0\xfb\0\0\x5L\0\0\x3\x17)
+UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xd6\0\0\0\xcc\0\0\x6l\0\0\x3\x5\0\0\x1\xd6\0\0\0\xe9\0\0\x6l\0\0\x3\x5\0\0\0\0\0\0\0\0\a\x80\0\0\x1\xd6\0\0\0\xe9\0\0\x6l\0\0\x3\x5)
 UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3)
 UILayout\microProfileDialogGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k)
 UILayout\microProfileDialogVisible=false
