--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=18
+RunsWithoutOptimizeDb=2
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -49,12 +49,12 @@ showCloseOnInactiveTabs=0
 showClosedTabsButton=false
 
 [Browser-View-Settings]
-LocationBarWidth=1113
+LocationBarWidth=1270
 SideBar=
 SideBarWidth=250
-WebSearchBarWidth=324
+WebSearchBarWidth=371
 WebViewWidth=2000
-WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0j\0\0\0I\0\0\a\x1b\0\0\x3\xa3\0\0\0j\0\0\0\x66\0\0\a\x1b\0\0\x3\xa3\0\0\0\0\0\0\0\0\a\x80\0\0\0j\0\0\0\x66\0\0\a\x1b\0\0\x3\xa3)
+WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\xff\xff\xff\xd0\0\0\x1\x95\0\0\x6\x81\0\0\x4\xd2\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
 instantBookmarksToolbar=false
 settingsDialogPage=0
 showBookmarksToolbar=false
