--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Mon Aug 17 04:10:58 2020
+# Tue Aug 18 04:56:12 2020
 
 [Input]
 ControllerPort0   = joypad
@@ -25,7 +25,7 @@ UseModalDialogs             = true
 [Files]
 CheatDirectory      = /home/jma/.config/snes9x/cheats/
 ExportDirectory     = /home/jma/.config/snes9x/exports/
-LastDirectory       = /home/jma/Roms4/SNES - Final Fantasy IV Ultima v11_11
+LastDirectory       = /home/jma/Roms4/SNES - A Link to the Past Redux
 LastShaderDirectory = /home/jma/.config/snes9x/shaders
 PatchDirectory      = /home/jma/.config/snes9x/patches/
 SRAMDirectory       = /home/jma/.config/snes9x/sram/
