Added git config file and updated rc files

--- a/.config/bauh/arch/makepkg.conf
+++ b/.config/bauh/arch/makepkg.conf
@@ -6,7 +6,7 @@
 #########################################################################
 # SOURCE ACQUISITION
 #########################################################################
-#
+
 #-- The download utilities that makepkg should use to acquire sources
 #  Format: 'protocol::agent'
 DLAGENTS=('file::/usr/bin/curl -gqC - -o %o %u'
@@ -31,7 +31,7 @@ VCSCLIENTS=('bzr::bzr'
 #########################################################################
 # ARCHITECTURE, COMPILE FLAGS
 #########################################################################
-#
+
 CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"
 
@@ -40,18 +40,22 @@ CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="-march=native -O2 -pipe -fno-plt"
 CXXFLAGS="-march=native -O2 -pipe -fno-plt"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
-#RUSTFLAGS="-C opt-level=2"
+
+RUSTFLAGS="-C opt-level=2"
+
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j$(nproc)"
+
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
-#DEBUG_RUSTFLAGS="-C debuginfo=2"
+
+DEBUG_RUSTFLAGS="-C debuginfo=2"
 
 #########################################################################
 # BUILD ENVIRONMENT
 #########################################################################
-#
+
 # Defaults:
 #  A negated environment option will do the opposite of the comments below.
 #
@@ -61,7 +65,7 @@ DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
 #-- check:    Run the check() function if present in the PKGBUILD
 #-- sign:     Generate PGP signature file
 #
-#
+
 #-- If using DistCC, your MAKEFLAGS will also need modification. In addition,
 #-- specify a space-delimited list of hosts running in the DistCC cluster.
 #DISTCC_HOSTS=""
@@ -73,7 +77,7 @@ BUILDDIR=/builds/makepkg
 # GLOBAL PACKAGE OPTIONS
 #   These are default values for the options=() settings
 #########################################################################
-#
+
 # Default: OPTIONS=(!strip docs libtool staticlibs emptydirs !zipman !purge !debug)
 #  A negated option will do the opposite of the comments below.
 #
@@ -90,29 +94,37 @@ OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge !debug)
 
 #-- File integrity checks to use. Valid: md5, sha1, sha224, sha256, sha384, sha512, b2
 INTEGRITY_CHECK=(md5)
+
 #-- Options to be used when stripping binaries. See `man strip' for details.
 STRIP_BINARIES="--strip-all"
+
 #-- Options to be used when stripping shared libraries. See `man strip' for details.
 STRIP_SHARED="--strip-unneeded"
+
 #-- Options to be used when stripping static libraries. See `man strip' for details.
 STRIP_STATIC="--strip-debug"
+
 #-- Manual (man and info) directories to compress (if zipman is specified)
 MAN_DIRS=({usr{,/local}{,/share},opt/*}/{man,info})
+
 #-- Doc directories to remove (if !docs is specified)
 DOC_DIRS=(usr/{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc})
+
 #-- Files to be removed from all packages (if purge is specified)
 PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
+
 #-- Directory to store source code in for debug packages
 DBGSRCDIR="/usr/src/debug"
 
 #########################################################################
 # PACKAGE OUTPUT
 #########################################################################
-#
+
 # Default: put built package and cached source in build directory
 #
 #-- Destination: specify a fixed directory where all packages will be placed
-#PKGDEST=/home/packages
+PKGDEST=/home/jma/Packages
+
 #-- Source cache: specify a fixed directory where source files will be cached
 #SRCDEST=/home/sources
 #-- Source packages: specify a fixed directory where all src packages will be placed
@@ -127,7 +139,7 @@ DBGSRCDIR="/usr/src/debug"
 #########################################################################
 # COMPRESSION DEFAULTS
 #########################################################################
-#
+
 COMPRESSGZ=(gzip -c -f -n)
 COMPRESSBZ2=(bzip2 -c -f)
 COMPRESSXZ=(xz -c -z - --threads=0)
@@ -140,7 +152,7 @@ COMPRESSLZ=(lzip -c -f)
 #########################################################################
 # EXTENSION DEFAULTS
 #########################################################################
-#
+
 PKGEXT='.pkg.tar.zst'
 SRCEXT='.src.tar.gz'
 
