--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=2
+RunsWithoutOptimizeDb=3
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=false
+isRunning=true
 
 [Shortcuts]
 useSingleKeyShortcuts=false
