Updated RC files

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,6 @@
-# This is Git's per-user configuration file.
-[user]
-# Please adapt and uncomment the following lines:
+# This is Git's per-user configuration file
 
+[user]
 name = jimboy-701
 email = blackchrome.996@gmail.com
 [creditial]
@@ -14,16 +13,21 @@ email = blackchrome.996@gmail.com
   interactive = auto
   ui = true
   pager = true
+
 [color "status"]
   added = green
   changed = red bold
   untracked = magenta bold
+
 [color "branch"]
   remote = yellow
+
 [url "git@github.com:"]
 	insteadOf = https://github.com/
+
 [url "git://"]
 	insteadOf = https://
+
 [url "https://aur.archlinux.org/"]
 	insteadOf = https://aur.archlinux.org/
 	insteadOf = http://aur.archlinux.org/
