More updated rc \ config files

--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=4
+RunsWithoutOptimizeDb=6
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=true
+isRunning=false
 
 [Shortcuts]
 useSingleKeyShortcuts=false
