Updated RC files

--- a/.config/youtube-dlg/settings.json
+++ b/.config/youtube-dlg/settings.json
@@ -9,12 +9,12 @@
     "workers_number": 3,
     "max_filesize": 0,
     "youtube_dl_debug": false,
-    "shutdown": true,
-    "selected_format": "0",
+    "shutdown": false,
+    "selected_format": "mp3",
     "write_all_subs": false,
     "enable_log": true,
-    "embed_thumbnail": false,
-    "audio_quality": "5",
+    "embed_thumbnail": true,
+    "audio_quality": "0",
     "main_win_size": "740/490",
     "restrict_filenames": false,
     "min_filesize_unit": "",
@@ -28,11 +28,11 @@
         "webm",
         "mp4"
     ],
-    "save_path": "/home/jma/Downloads",
+    "save_path": "/home/jma/Desktop",
     "output_template": "%(uploader)s/%(title)s.%(ext)s",
-    "show_completion_popup": true,
+    "show_completion_popup": false,
     "locale_name": "en_US",
-    "to_audio": false,
+    "to_audio": true,
     "confirm_deletion": false,
     "min_filesize": 0,
     "save_path_dirs": [
@@ -42,7 +42,7 @@
         "/home/jma/Videos",
         "/home/jma/Music"
     ],
-    "audio_format": "",
+    "audio_format": "mp3",
     "max_downloads": 0,
     "output_format": 1,
     "embed_subs": false,
