Added mame configs and apparmor along other updated RC files

--- a/.config/audacious/config
+++ b/.config/audacious/config
@@ -1,7 +1,7 @@
 
 [audgui]
 filebrowser_win=606,285,719,480
-filesel_path=/home/jma/Downloads/Legend of Zelda, The - Ocarina of Time (EMU).zophar
+filesel_path=/run/media/jma/SEAGATEUSB/Music/_Recent3
 info_win=215,480,656,423
 
 [gtkui]
@@ -13,18 +13,19 @@ player_y=285
 item_count=0
 
 [skins]
-equalizer_x=1114
-equalizer_y=134
-player_x=1114
-player_y=18
+equalizer_x=363
+equalizer_y=391
+player_x=363
+player_y=275
 playlist_visible=TRUE
-playlist_x=1389
-playlist_y=18
+playlist_x=755
+playlist_y=201
 skin=/usr/share/audacious/Skins/Refugee
 twoway_scroll=TRUE
 
 [skins-layout]
 albumart=1101,33,288,192
+lyricwiki=1189,354,611,192
 
 [vgmstream]
 fade_delay=0
