--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -1,7 +1,10 @@
+# Check /etc/pacman.d/gnupg/gpg.conf
+# Check Kungfu/pacman-key.txt for fixes
 no-greeting
 no-permission-warning
 lock-never
 keyserver hkp://keyserver.ubuntu.com
+# keyserver hkp://pool.sks-keyservers.net
 keyserver-options timeout=10
 keyserver-options import-clean
 keyserver-options no-self-sigs-only
