--- a/.config/citra-emu/qt-config.ini
+++ b/.config/citra-emu/qt-config.ini
@@ -271,8 +271,8 @@ custom_top_top=0
 custom_top_top\default=true
 factor_3d=0
 factor_3d\default=true
-filter_mode=false
-filter_mode\default=false
+filter_mode=true
+filter_mode\default=true
 layout_option=2
 pp_shader_name=none (builtin)
 pp_shader_name\default=true
@@ -378,7 +378,7 @@ Paths\language=en
 Paths\language\default=false
 Paths\moviePlaybackPath=
 Paths\movieRecordPath=
-Paths\recentFiles=/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/The Legend of Zelda - A Link Between Worlds (EUR) [Decrypted].3ds, "/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/3DS0011 - Super Street Fighter IV - 3D Edition (Europe) (En,Fr,De,Es,It) Decrypted.3ds"
+Paths\recentFiles=/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/The Legend of Zelda - A Link Between Worlds (EUR) [Decrypted].3ds, /run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/Blaster Master Zero (EUR)Decrypted.cxi, "/run/media/jma/SEAGATEUSB/_Testing.Roms/3DS/3DS0011 - Super Street Fighter IV - 3D Edition (Europe) (En,Fr,De,Es,It) Decrypted.3ds"
 Paths\romsPath=
 Paths\screenshotPath=
 Paths\symbolsPath=
@@ -476,8 +476,8 @@ Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq=Ctrl+D
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq\default=true
 UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x4\x82\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\xd6\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
-UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x45\0\0\0\x89\0\0\x5\xdb\0\0\x2\xc2\0\0\x1\x45\0\0\0\xa6\0\0\x5\xdb\0\0\x2\xc2\0\0\0\0\0\0\0\0\a\x80\0\0\x1\x45\0\0\0\xa6\0\0\x5\xdb\0\0\x2\xc2)
-UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3)
+UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\xfa\0\0\0\xba\0\0\x5\x90\0\0\x2\xf3\0\0\0\xfa\0\0\0\xd7\0\0\x5\x90\0\0\x2\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\0\xfa\0\0\0\xd7\0\0\x5\x90\0\0\x2\xf3)
+UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x1\xdf\0\0\x1\xdf\0\0\0\0\0\0\0\0\0\0\x1\xdf\0\0\x1\xdf\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x1\xdf\0\0\x1\xdf)
 UILayout\microProfileDialogGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k)
 UILayout\microProfileDialogVisible=false
 UILayout\microProfileDialogVisible\default=true
