Updated RC files

--- a/.mame/cfg/default.cfg
+++ b/.mame/cfg/default.cfg
@@ -93,14 +93,24 @@
                     KEYCODE_X OR JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON8
                 </newseq>
             </port>
-            <port type="START1">
+            <port type="P1_START">
                 <newseq type="standard">
                     JOYCODE_1_BUTTON10
                 </newseq>
             </port>
+            <port type="P1_SELECT">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON9
+                </newseq>
+            </port>
+            <port type="START1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6
+                </newseq>
+            </port>
             <port type="COIN1">
                 <newseq type="standard">
-                    KEYCODE_5 OR JOYCODE_1_BUTTON9
+                    JOYCODE_1_BUTTON5
                 </newseq>
             </port>
         </input>
