--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xd2\0\x5\xe0\x66\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xd7\0U\x1aY\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=0
+RunsWithoutOptimizeDb=20
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
