--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xdc\x3\xfe\xf1\b\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xe2\0\xb7I\x97\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=6
+RunsWithoutOptimizeDb=11
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -49,10 +49,10 @@ showCloseOnInactiveTabs=0
 showClosedTabsButton=false
 
 [Browser-View-Settings]
-LocationBarWidth=1244
+LocationBarWidth=1270
 SideBar=
 SideBarWidth=250
-WebSearchBarWidth=363
+WebSearchBarWidth=371
 WebViewWidth=2000
 WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\xff\xff\xff\xd0\0\0\x1\x95\0\0\x6\x81\0\0\x4\xd2\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
 instantBookmarksToolbar=false
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=false
+isRunning=true
 
 [Shortcuts]
 useSingleKeyShortcuts=false
