--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xe2\0\xb7I\x97\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xe7\x4\x83\x15\x1d\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=11
+RunsWithoutOptimizeDb=18
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=true
+isRunning=false
 
 [Shortcuts]
 useSingleKeyShortcuts=false
