--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x85\xe7\x4\x83\x15\x1d\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x86\x2\0ir\x1b\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=18
+RunsWithoutOptimizeDb=5
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -49,12 +49,12 @@ showCloseOnInactiveTabs=0
 showClosedTabsButton=false
 
 [Browser-View-Settings]
-LocationBarWidth=1270
+LocationBarWidth=1269
 SideBar=
 SideBarWidth=250
-WebSearchBarWidth=371
+WebSearchBarWidth=372
 WebViewWidth=2000
-WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\xff\xff\xff\xd0\0\0\x1\x95\0\0\x6\x81\0\0\x4\xd2\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
+WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\0\0\0r\0\0\0\x87\0\0\a#\0\0\x3\xc4\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
 instantBookmarksToolbar=false
 settingsDialogPage=0
 showBookmarksToolbar=false
@@ -79,7 +79,7 @@ ExternalManagerArguments=
 ExternalManagerExecutable=
 UseExternalManager=false
 defaultDownloadPath=/home/jma/Downloads/
-lastDownloadPath=/home/jma
+lastDownloadPath=/home/jma/_Custom
 
 [FileDialogPaths]
 Preferences-ChooseDownPath=/home/jma
@@ -109,7 +109,7 @@ showSearchSuggestions=true
 
 [SessionRestore]
 isRestoring=false
-isRunning=false
+isRunning=true
 
 [Shortcuts]
 useSingleKeyShortcuts=false
