Mass update to configs, removed desmume since it currently broken

--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Tue Aug 18 04:56:12 2020
+# Sat Oct 31 00:34:24 2020
 
 [Input]
 ControllerPort0   = joypad
@@ -25,7 +25,7 @@ UseModalDialogs             = true
 [Files]
 CheatDirectory      = /home/jma/.config/snes9x/cheats/
 ExportDirectory     = /home/jma/.config/snes9x/exports/
-LastDirectory       = /home/jma/Roms4/SNES - A Link to the Past Redux
+LastDirectory       = /home/jma/Roms/SNES - Terranigma
 LastShaderDirectory = /home/jma/.config/snes9x/shaders
 PatchDirectory      = /home/jma/.config/snes9x/patches/
 SRAMDirectory       = /home/jma/.config/snes9x/sram/
@@ -104,7 +104,7 @@ BilinearFilter          = false  # Smoothes scaled image
 ChangeDisplayResolution = false  # Set the resolution in fullscreen mode
 ForceInvertedByteOrder  = false
 FullscreenOnOpen        = false  # Set the screen resolution after opening a ROM
-HardwareAcceleration    = 1      # 0: None, 1: OpenGL, 2: XVideo
+HardwareAcceleration    = 0      # 0: None, 1: OpenGL, 2: XVideo
 HiresEffect             = 1      # 0: Downscale to low-res, 1: Leave as-is, 2: Upscale low-res screens
 MaintainAspectRatio     = true   # Resize the screen to the proportions set by aspect ratio option
 Multithreading          = false  # Apply filters using multiple threads
