--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x86\x2\0ir\x1b\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x86\x1f\0)<\x8d\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=6
+RunsWithoutOptimizeDb=0
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -79,7 +79,7 @@ ExternalManagerArguments=
 ExternalManagerExecutable=
 UseExternalManager=false
 defaultDownloadPath=/home/jma/Downloads/
-lastDownloadPath=/home/jma/_Custom
+lastDownloadPath=/home/jma/Downloads/SMK - Epic Racers v1.0
 
 [FileDialogPaths]
 Preferences-ChooseDownPath=/home/jma
