Updated configs including .zshrc

--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Sat Oct 31 00:34:24 2020
+# Fri Nov 13 22:35:02 2020
 
 [Input]
 ControllerPort0   = joypad
@@ -25,7 +25,7 @@ UseModalDialogs             = true
 [Files]
 CheatDirectory      = /home/jma/.config/snes9x/cheats/
 ExportDirectory     = /home/jma/.config/snes9x/exports/
-LastDirectory       = /home/jma/Roms/SNES - Terranigma
+LastDirectory       = /home/jma/Downloads/SMK - Epic Racers v1.0
 LastShaderDirectory = /home/jma/.config/snes9x/shaders
 PatchDirectory      = /home/jma/.config/snes9x/patches/
 SRAMDirectory       = /home/jma/.config/snes9x/sram/
