--- a/.config/falkon/profiles/default/settings.ini
+++ b/.config/falkon/profiles/default/settings.ini
@@ -1,7 +1,7 @@
 [AdBlock]
 disabledRules=@Invalid()
 enabled=true
-lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x86\x1f\0)<\x8d\0)
+lastUpdate=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x86\xe9\0/\xa9H\0)
 
 [AddressBar]
 CustomProgressColor="@Variant(\0\0\0\x43\x1\xff\xff==\xae\xae\xe9\xe9\0\0)"
@@ -20,7 +20,7 @@ showOnlyIconsInToolbar=false
 showOnlyTextInToolbar=false
 
 [Browser]
-RunsWithoutOptimizeDb=0
+RunsWithoutOptimizeDb=11
 
 [Browser-Fonts]
 CursiveFont=DejaVu Sans
@@ -49,12 +49,12 @@ showCloseOnInactiveTabs=0
 showClosedTabsButton=false
 
 [Browser-View-Settings]
-LocationBarWidth=1269
+LocationBarWidth=1138
 SideBar=
 SideBarWidth=250
-WebSearchBarWidth=372
+WebSearchBarWidth=333
 WebViewWidth=2000
-WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\0\0\0r\0\0\0\x87\0\0\a#\0\0\x3\xc4\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
+WindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0r\0\0\0j\0\0\a#\0\0\x3\xc4\0\0\0r\0\0\0\x87\0\0\a#\0\0\x3\xc4\0\0\0\0\0\0\0\0\a\x80\0\0\0r\0\0\0\x87\0\0\a#\0\0\x3\xc4)
 instantBookmarksToolbar=false
 settingsDialogPage=0
 showBookmarksToolbar=false
@@ -62,7 +62,7 @@ showNavigationToolbar=true
 showStatusBar=false
 
 [BrowsingLibrary]
-historyState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xa1\0\0\0\x4\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0<\0\0\0\x1\0\0\0\0\0\0\0\x4\0\0\x1\xe\0\0\0\x1\0\0\0\0\0\0\0\xec\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0<)
+historyState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x8c\0\0\0\x4\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0<\0\0\0\x1\0\0\0\0\0\0\0\x4\0\0\x1\xe\0\0\0\x1\0\0\0\0\0\0\0\xec\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0O\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0<)
 size=@Size(760 470)
 
 [Cookie-Settings]
@@ -104,7 +104,7 @@ Geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x1c\0\0\x1\t\0\0\x5\x63\0\0\
 DefaultEngine=DuckDuckGo
 SearchFromAddressBar=true
 SearchWithDefaultEngine=false
-activeEngine=DuckDuckGo
+activeEngine=Google
 showSearchSuggestions=true
 
 [SessionRestore]
