--- a/.config/bauh/arch.yml
+++ b/.config/bauh/arch.yml
@@ -1,8 +1,12 @@
 aur: true
 aur_build_dir: null
 aur_build_only_chosen: true
+aur_idx_exp: 1
+aur_rebuild_detector: true
+aur_rebuild_detector_no_bin: true
 aur_remove_build_dir: true
 automatch_providers: true
+categories_exp: 24
 check_dependency_breakage: true
 clean_cached: true
 edit_aur_pkgbuild: false
