Adding dosbox configs and other updates to rc files

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -41,6 +41,10 @@
     "editor.renderWhitespace": "all",
     "editor.renderLineHighlight": "all",
     "workbench.editorAssociations": {
-        "*.ipynb": "jupyter.notebook.ipynb"
+        "*.ipynb": "jupyter-notebook"
+    },
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
     }
 }
