--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -46,5 +46,6 @@
     "notebook.cellToolbarLocation": {
         "default": "right",
         "jupyter-notebook": "left"
-    }
+    },
+    "bracket-pair-colorizer-2.depreciation-notice": false
 }
