--- a/.config/snes9x/snes9x.conf
+++ b/.config/snes9x/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Fri Nov 13 22:35:02 2020
+# Fri Jul 16 04:04:09 2021
 
 [Input]
 ControllerPort0   = joypad
@@ -25,7 +25,7 @@ UseModalDialogs             = true
 [Files]
 CheatDirectory      = /home/jma/.config/snes9x/cheats/
 ExportDirectory     = /home/jma/.config/snes9x/exports/
-LastDirectory       = /home/jma/Downloads/SMK - Epic Racers v1.0
+LastDirectory       = /home/jma/Downloads
 LastShaderDirectory = /home/jma/.config/snes9x/shaders
 PatchDirectory      = /home/jma/.config/snes9x/patches/
 SRAMDirectory       = /home/jma/.config/snes9x/sram/
@@ -73,7 +73,7 @@ MuteSoundDuringTurbo    = false
 PlaybackRate            = 7      # 1: 8000Hz, 2: 11025Hz, 3: 16000Hz, 4: 22050Hz, 5: 32000Hz, 6: 44100Hz, 7: 48000Hz
 
 [Window State]
-CurrentDisplayTab      = 1
+CurrentDisplayTab      = 0
 EnableIcons            = true
 Fullscreen             = false
 MainHeight             = 923
