--- a/.dosbox/dosbox-ECE.conf
+++ b/.dosbox/dosbox-ECE.conf
@@ -26,7 +26,7 @@
 fullscreen       = false
 fulldouble       = false
 fullresolution   = original
-windowresolution = 1280x1024
+windowresolution = 1600x900
 output           = opengl
 autolock         = true
 sensitivity      = 100
@@ -48,7 +48,7 @@ usescancodes     = true
 language =
 machine  = svga_s3
 captures = capture
-memsize  = 16
+memsize  = 256
 
 [render]
 # frameskip: How many frames DOSBox skips before drawing one.
@@ -67,7 +67,7 @@ memsize  = 16
 frameskip = 0
 aspect    = false
 scaler    = none
-glshader  = xbr-lv3
+glshader  = advinterp3x
 
 [cpu]
 #      core: CPU Core used in emulation. auto will switch to dynamic if available and
@@ -90,7 +90,7 @@ glshader  = xbr-lv3
 
 core      = auto
 cputype   = auto
-cycles    = auto
+cycles    = max
 cycleup   = 10
 cycledown = 20
 
@@ -102,8 +102,8 @@ cycledown = 20
 #                'max'           12MB card (4MB front buffer + 2x4MB texture units)
 #              Possible values: standard, max.
 
-voodoo    = auto
-voodoomem = standard
+voodoo    = opengl
+voodoomem = max
 
 [mixer]
 #   nosound: Enable silent mode, sound is still emulated though.
@@ -233,7 +233,7 @@ mpu401                  = intelligent
 mididevice              = default
 midiconfig              = 128:0
 fluid.driver            = default
-fluid.soundfont         =
+fluid.soundfont         = /usr/share/soundfonts/FluidR3_GM.sf2
 fluid.samplerate        = 48000
 fluid.gain              = .6
 fluid.polyphony         = 256
@@ -381,10 +381,17 @@ deadzone      = 10
 # serial4: see serial1
 #            Possible values: dummy, disabled, modem, nullmodem, directserial.
 
-serial1 = dummy
-serial2 = dummy
+serial1 = disabled
+serial2 = disabled
 serial3 = disabled
 serial4 = disabled
+
+[ne2000]
+nicbase=300
+ne2000=true
+nicirq=3
+macaddr=AC:DE:48:88:99:AA
+realnic=list
 
 [glide]
 #  glide: Enable glide emulation: true,false.
@@ -392,7 +399,7 @@ serial4 = disabled
 #           OpenGlide does not support locking aux buffer, please use _noaux modes.
 # splash: Show 3dfx splash screen (requires 3dfxSpl2.dll).
 
-glide  = false
+glide  = true
 lfb    = full_noaux
 splash = true
 
@@ -412,7 +419,8 @@ umb            = true
 keyboardlayout = auto
 
 [autoexec]
-# Lines in this section will be run at startup.
-# You can put your MOUNT lines here.
+#imgmount 0 /home/jma/.dosbox/dos622.flp -t floppy -fs none
+imgmount 2 /home/jma/.dosbox/hdd.base.img -t hdd -fs none -size 512,63,64,1023
+boot -l c
 
 
