--- a/.config/citra-emu/qt-config.ini
+++ b/.config/citra-emu/qt-config.ini
@@ -160,6 +160,10 @@ use_cpu_jit=true
 use_cpu_jit\default=true
 
 [Data%20Storage]
+nand_directory=/home/jma/.local/share/citra-emu/nand/
+nand_directory\default=true
+sdmc_directory=/home/jma/.local/share/citra-emu/sdmc/
+sdmc_directory\default=true
 use_virtual_sd=true
 use_virtual_sd\default=true
 
@@ -300,10 +304,12 @@ frame_limit_alternate=200
 frame_limit_alternate\default=true
 resolution_factor=2
 resolution_factor\default=false
-shaders_accurate_mul=false
+shaders_accurate_mul=true
 shaders_accurate_mul\default=true
 texture_filter_name=none
 texture_filter_name\default=true
+use_disk_shader_cache=true
+use_disk_shader_cache\default=true
 use_frame_limit_alternate=false
 use_frame_limit_alternate\default=true
 use_hw_renderer=true
@@ -424,49 +430,49 @@ Shortcuts\Main%20Window\Load%20File\Context\default=true
 Shortcuts\Main%20Window\Load%20File\KeySeq=Ctrl+O
 Shortcuts\Main%20Window\Load%20File\KeySeq\default=true
 Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\Context=1
-Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\Context\default=false
+Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\Context\default=true
 Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\KeySeq=Ctrl+V
-Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\KeySeq\default=false
+Shortcuts\Main%20Window\Load%20from%20Newest%20Slot\KeySeq\default=true
 Shortcuts\Main%20Window\Remove%20Amiibo\Context=2
-Shortcuts\Main%20Window\Remove%20Amiibo\Context\default=false
+Shortcuts\Main%20Window\Remove%20Amiibo\Context\default=true
 Shortcuts\Main%20Window\Remove%20Amiibo\KeySeq=F3
-Shortcuts\Main%20Window\Remove%20Amiibo\KeySeq\default=false
+Shortcuts\Main%20Window\Remove%20Amiibo\KeySeq\default=true
 Shortcuts\Main%20Window\Restart%20Emulation\Context=1
 Shortcuts\Main%20Window\Restart%20Emulation\Context\default=true
 Shortcuts\Main%20Window\Restart%20Emulation\KeySeq=F6
-Shortcuts\Main%20Window\Restart%20Emulation\KeySeq\default=false
+Shortcuts\Main%20Window\Restart%20Emulation\KeySeq\default=true
 Shortcuts\Main%20Window\Rotate%20Screens%20Upright\Context=1
 Shortcuts\Main%20Window\Rotate%20Screens%20Upright\Context\default=true
 Shortcuts\Main%20Window\Rotate%20Screens%20Upright\KeySeq=F8
-Shortcuts\Main%20Window\Rotate%20Screens%20Upright\KeySeq\default=false
+Shortcuts\Main%20Window\Rotate%20Screens%20Upright\KeySeq\default=true
 Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\Context=1
 Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\Context\default=true
 Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\KeySeq=Ctrl+C
-Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\KeySeq\default=false
+Shortcuts\Main%20Window\Save%20to%20Oldest%20Slot\KeySeq\default=true
 Shortcuts\Main%20Window\Stop%20Emulation\Context=1
 Shortcuts\Main%20Window\Stop%20Emulation\Context\default=true
 Shortcuts\Main%20Window\Stop%20Emulation\KeySeq=F5
-Shortcuts\Main%20Window\Stop%20Emulation\KeySeq\default=false
+Shortcuts\Main%20Window\Stop%20Emulation\KeySeq\default=true
 Shortcuts\Main%20Window\Swap%20Screens\Context=1
 Shortcuts\Main%20Window\Swap%20Screens\Context\default=true
 Shortcuts\Main%20Window\Swap%20Screens\KeySeq=F9
-Shortcuts\Main%20Window\Swap%20Screens\KeySeq\default=false
+Shortcuts\Main%20Window\Swap%20Screens\KeySeq\default=true
 Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\Context=2
-Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\Context\default=false
+Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\KeySeq=Ctrl+Z
-Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\KeySeq\default=false
+Shortcuts\Main%20Window\Toggle%20Alternate%20Speed\KeySeq\default=true
 Shortcuts\Main%20Window\Toggle%20Filter%20Bar\Context=1
-Shortcuts\Main%20Window\Toggle%20Filter%20Bar\Context\default=false
+Shortcuts\Main%20Window\Toggle%20Filter%20Bar\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Filter%20Bar\KeySeq=Ctrl+F
-Shortcuts\Main%20Window\Toggle%20Filter%20Bar\KeySeq\default=false
+Shortcuts\Main%20Window\Toggle%20Filter%20Bar\KeySeq\default=true
 Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\Context=2
-Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\Context\default=false
+Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\KeySeq=Ctrl+A
-Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\KeySeq\default=false
+Shortcuts\Main%20Window\Toggle%20Frame%20Advancing\KeySeq\default=true
 Shortcuts\Main%20Window\Toggle%20Screen%20Layout\Context=1
-Shortcuts\Main%20Window\Toggle%20Screen%20Layout\Context\default=false
+Shortcuts\Main%20Window\Toggle%20Screen%20Layout\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Screen%20Layout\KeySeq=F10
-Shortcuts\Main%20Window\Toggle%20Screen%20Layout\KeySeq\default=false
+Shortcuts\Main%20Window\Toggle%20Screen%20Layout\KeySeq\default=true
 Shortcuts\Main%20Window\Toggle%20Status%20Bar\Context=1
 Shortcuts\Main%20Window\Toggle%20Status%20Bar\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Status%20Bar\KeySeq=Ctrl+S
@@ -475,13 +481,13 @@ Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context=2
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\Context\default=true
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq=Ctrl+D
 Shortcuts\Main%20Window\Toggle%20Texture%20Dumping\KeySeq\default=true
-UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\aG\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\x9b\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
-UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a[\0\0\x4\x37\0\0\x1\xf4\0\0\x1\xa5\0\0\x6\x8a\0\0\x3\xc1\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x1d\0\0\a[\0\0\x4\x37)
+UILayout\gameListHeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x4\x97\0\0\0\x5\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\x2\x80\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\xeb\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+UILayout\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x97\0\0\x1\"\0\0\x6-\0\0\x3[\0\0\x1\x97\0\0\x1?\0\0\x6-\0\0\x3[\0\0\0\0\0\0\0\0\a\x80\0\0\x1\x97\0\0\x1?\0\0\x6-\0\0\x3[)
 UILayout\geometryRenderWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x1\xdf\0\0\x1\xf3)
 UILayout\microProfileDialogGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x3\xe7\0\0\x2k)
 UILayout\microProfileDialogVisible=false
 UILayout\microProfileDialogVisible\default=true
-UILayout\state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\x1\xfb\0\0\0\x1c\0W\0\x61\0i\0t\0T\0r\0\x65\0\x65\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\0\0\0\x1\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\b\xfb\0\0\0\x18\0\x41\0R\0M\0R\0\x65\0g\0i\0s\0t\0\x65\0r\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x85\x1\0\0\x3\xfb\0\0\0 \0G\0r\0\x61\0p\0h\0i\0\x63\0s\0\x44\0\x65\0\x62\0u\0g\0g\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\"\0P\0i\0\x63\0\x61\0 \0\x43\0o\0m\0m\0\x61\0n\0\x64\0 \0L\0i\0s\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0*\0P\0i\0\x63\0\x61\0\x42\0r\0\x65\0\x61\0k\0P\0o\0i\0n\0t\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0 \0P\0i\0\x63\0\x61\0V\0\x65\0r\0t\0\x65\0x\0S\0h\0\x61\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xde\x1\0\0\x3\xfb\0\0\0\x12\0\x43\0i\0T\0r\0\x61\0\x63\0i\0n\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0P\x1\0\0\x3\xfb\0\0\0.\0L\0L\0\x45\0S\0\x65\0r\0v\0i\0\x63\0\x65\0M\0o\0\x64\0u\0l\0\x65\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\x16\0I\0P\0\x43\0R\0\x65\0\x63\0o\0r\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xef\x1\0\0\x3\0\0\a\\\0\0\x3\xde\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
+UILayout\state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\x1\xfb\0\0\0\x1c\0W\0\x61\0i\0t\0T\0r\0\x65\0\x65\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\0\0\0\x1\0\0\0\0\0\0\0\0\xfc\x2\0\0\0\b\xfb\0\0\0\x18\0\x41\0R\0M\0R\0\x65\0g\0i\0s\0t\0\x65\0r\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x85\x1\0\0\x3\xfb\0\0\0 \0G\0r\0\x61\0p\0h\0i\0\x63\0s\0\x44\0\x65\0\x62\0u\0g\0g\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\"\0P\0i\0\x63\0\x61\0 \0\x43\0o\0m\0m\0\x61\0n\0\x64\0 \0L\0i\0s\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0*\0P\0i\0\x63\0\x61\0\x42\0r\0\x65\0\x61\0k\0P\0o\0i\0n\0t\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xad\x1\0\0\x3\xfb\0\0\0 \0P\0i\0\x63\0\x61\0V\0\x65\0r\0t\0\x65\0x\0S\0h\0\x61\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xde\x1\0\0\x3\xfb\0\0\0\x12\0\x43\0i\0T\0r\0\x61\0\x63\0i\0n\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0P\x1\0\0\x3\xfb\0\0\0.\0L\0L\0\x45\0S\0\x65\0r\0v\0i\0\x63\0\x65\0M\0o\0\x64\0u\0l\0\x65\0s\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0y\x1\0\0\x3\xfb\0\0\0\x16\0I\0P\0\x43\0R\0\x65\0\x63\0o\0r\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xef\x1\0\0\x3\0\0\x4\x97\0\0\x1\xe0\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
 Updater\check_for_update_on_start=true
 Updater\check_for_update_on_start\default=true
 Updater\update_on_close=false
